# embedded-canvas

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  msrv.yml  release-plz.yml
examples/: canvas.rs  cropped_text.rs  cropping.rs  transparency.rs
src/: canvas.rs  consts.rs  lib.rs  utils.rs
