[package]
authors = ["Lechev.space <dev@lechev.space>", "Lachezar Lechev"]
name = "embedded-canvas"
version = "0.2.0-pre"

description = "Draw anything with ease on the Canvas before drawing it to your small hardware display"
categories = ["embedded", "no-std"]
edition = "2021"
keywords = ["embedded-graphics", "graphics", "embedded"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LechevSpace/embedded-canvas"
documentation = "https://docs.rs/embedded-canavas"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["transform"]
# Enables `impl embedded_graphics::transform::Transform for CanvasAt`
transform = ["embedded-graphics"]

[dependencies]
embedded-graphics-core = "0.3.3"

embedded-graphics = {version = "0.7.1", optional = true}

[dev-dependencies]
embedded-graphics-simulator = "^0.3.0"
