[package]
name = "embedded-canvas"
version = "0.2.0-pre"
authors = ["Lechev.space <dev@lechev.space>", "Lachezar Lechev"]
description = "Draw anything with ease on the Canvas before drawing it to your small hardware display"
categories = ["embedded", "no-std"]

keywords = ["embedded-graphics", "graphics", "embedded"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LechevSpace/embedded-canvas"
documentation = "https://docs.rs/embedded-canavas"
homepage = "https://github.com/LechevSpace/embedded-canavas"

edition = "2021"

# Edition 2021 requires at least 1.56
rust-version = "1.56"

[[example]]
name = "canvas"
required-features = ["embedded-graphics"]

[[example]]
name = "transparency"
required-features = ["embedded-graphics"]

[[example]]
name = "cropped_text"
required-features = ["embedded-graphics"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["transform"]
# Enables `impl embedded_graphics::transform::Transform for CanvasAt`
transform = ["embedded-graphics"]

[dependencies]
embedded-graphics-core = "0.3.3"

embedded-graphics = {version = "0.7.1", optional = true}

[dev-dependencies]
embedded-graphics-simulator = "^0.3.0"
