[package]
name = "embedded-canvas"
version = "0.3.0"
authors = ["Lechev.space <dev@lechev.space>", "Lachezar Lechev"]
description = "Draw anything with ease on the Canvas before drawing it to your small hardware display"
categories = ["embedded", "no-std"]

keywords = ["embedded-graphics", "graphics", "embedded"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LechevSpace/embedded-canvas"
documentation = "https://docs.rs/embedded-canvas"
homepage = "https://github.com/LechevSpace/embedded-canvas"

edition = "2021"

# An embedded-graphics dependency requires 1.71
rust-version = "1.71"

[[example]]
name = "canvas"
required-features = ["embedded-graphics"]

[[example]]
name = "transparency"
required-features = ["embedded-graphics"]

[[example]]
name = "cropped_text"
required-features = ["embedded-graphics"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["transform", "alloc"]
# Enables `impl embedded_graphics::transform::Transform for CanvasAt`
transform = ["embedded-graphics"]
alloc = []

[dependencies]
embedded-graphics-core = "0.4"

embedded-graphics = {version = "0.8", optional = true}

[dev-dependencies]
embedded-graphics-simulator = "0.6"
